<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_convert_to_group_with_messages"
        android:icon="@drawable/whatsappplus_icon_group_small"
        android:title="@string/action_convert_to_group"
        android:onClick="onConvertToGroupClick"
        app:showAsAction="always"/>
    <!--TODO disable for eval-->

    <item
        android:id="@+id/action_star"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/action_star"
        android:onClick="notImplemented"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        android:onClick="notImplemented"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/action_copy"
        android:onClick="notImplemented"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_white_24dp"
        android:title="@string/action_forward"
        android:onClick="notImplemented"
        app:showAsAction="always"/>
</menu>