<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.tum.whatsappplus.ContactSelectionActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_selection_text"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactName"
            android:hint="@string/contact_selection_hint" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addContacts"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:src="@android:drawable/ic_input_add"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_add_contact_button"
            android:baselineAlignBottom="false"
            android:onClick="openContacts"
            android:tint="@color/color_add_button" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout"></TableLayout>

</LinearLayout>
